--- a/collection.html
+++ b/collection.html
@@ -213,7 +213,9 @@
 
 </body>
 
-
+<div style="background-color: #232F3E; width: 100%; margin: auto; padding: 1rem;">
+    <center style="color: white; font-weight: 500; font-size: 13px;"> <a href="#top">Back To Top</a></center>
+</div>
 
 <footer>
 
