--- a/index.html
+++ b/index.html
@@ -159,6 +159,20 @@
                 </div>
             </div>
         </div>
+        <!--------------------------------------------->
+        <div class="row row-content align-items-left">
+            <div class="col col-sm order-sm-first col-md">
+                <div class="media">
+
+                    <div class="media-body">
+                        <h2 class="mt-0">Project Introduction:</h2>
+                        <h4>How it works?</h4>
+                        <p style="text-align: justify;"><i> "Tailor online" is project that break typical tailor attitude and time clashes. At tailor online our first priority is our customer satisfaction. We all know in this modern erra no one have much time and our team realize that so we make this project and take tailor at your door step. Now you can approach tailor by just visit our site make account or if you have no much time for creating acount then go direct order option, enter your details select your design in our collection or give your design what you want to stitch our system assign you time frame and farword your details to our experienced tailors and at given time your dress will at your door step. We are dealing in all format and type of clothes e.g mens women and if you are company and wants to stitch clothes in bulk form feel free to contact with us.<br> "Thank You"</i></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!---------------------------------sultan-->
         <div class="row row-content align-items-left">
             <div class="col col-sm order-sm-first col-md">
                 <div class="media">
@@ -166,18 +180,18 @@
                     <div class="media-body">
                         <h2 class="mt-0">Sultan Khan</h2>
                         <h4>Executive Cheif (Tailor)</h4>
-                        <p> <i> "On Tailor online all staff have experienced and competative to work. We ensure high quality stitching and all our task completed in given time."</i> </p>
+                        <p style="text-align: justify;"> <i> "On Tailor online all staff have experienced and competative to work. We ensure high quality stitching and all our task completed in given time."</i> </p>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
+
 
 
     <!-- Our work -->
     <br>
-    <p class="label">OUR COLLECTION</p>
+    <p class="label">OUR PRODUCTS</p>
 
     <div class="our_work ">
 
@@ -284,33 +298,43 @@
 
 
 <footer>
-
-    <div class="row container-fluid" style="padding-top: 2rem;">
-        <div class="col-lg-3 col-md-3 col-sm-6">
-            <label>General Information</label><br><br>
-            <a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor message from tailor website." target="blank">
-                <i class="fas fa-at fa-1.9x"></i>&nbsp; Contact - Taimoor
-            </a><br>
-            <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais message from tailor website." target="blank">
-                <i class="fas fa-at fa-1.9x"></i>&nbsp; Contact - Awais
-            </a>
-        </div>
-
-        <div class="col-lg-3 col-md-3 col-sm-6"></div>
-
-        <br>
-        <div class="col-lg-6 col-md-6 col-sm-12">
-            <label>Find us here</label><br>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5029.414381286717!2d74.40751999999996!3d31.547018299999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39190f8aa6801965%3A0xd4b98ebf429d2311!2sAl-Faisal%20Town%2C%20Lahore%2C%20Punjab%2C%20Pakistan!5e1!3m2!1sen!2s!4v1604678886811!5m2!1sen!2s"
-                width="300" height="150" frameborder="0" style="border:0; border-radius: .3rem; padding: .1rem;" allowfullscreen="" aria-hidden=" false" tabindex="0"></iframe>
-
+    <div class="container">
+        <div class="row">
+            <div class="col-4 offset-0 col-sm-2">
+                <h5>Links</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="col-7 col-sm-5">
+                <h5>Our Address</h5>
+                <address>
+              121, Clear Water Bay Road lahore<br>
+              Clear Water Bay, Kowloon<br>
+              HONG KONG<br>
+              <span class="fa fa-phone fa-lg"></span>: +852 1234 5678<br>
+              <span class="fa fa-fax fa-lg"></span>: +852 8765 4321<br>
+              <span class="fa fa-envelope fa-lg"></span>: <a href="mailto:confusion@food.net">confusion@food.net</a>
+           </address>
+            </div>
+            <div class="col-12 col-sm-4 align-self-center">
+                <div class="text-center">
+                    <a class="btn btn-social-icon btn-google" href="http://google.com/+">Google+<i class="fa fa-google-plus fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id=">Facebook<i class="fa fa-facebook fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/">LinkedIn<i class="fa fa-linkedin fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/">Twitter<i class="fa fa-twitter fa-lg"></i></a>
+                    <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/">YouTube<i class="fa fa-youtube fa-lg"></i></a>
+                    <a href="mailto:">Mail</a>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto">
+                        <p>© Copyright 2018 Ristorante Con Fusion</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
-    <p>
-        <center>
-            <div class="copy"> <small>&copy; Copyright 2020 - Tailor online </div>
-        </center>
-
-    </p>
 </footer>
