--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </ul>
     </div>
     <div class="avtar "><i class="fas fa-caret-down fa-2x "></i>&nbsp;</div>
-    <i class="fas fa-user-circle fa-2x "></i>
+    <a href="./auth/login.html"><i class="fas fa-user-circle fa-2x "></i></a>
 
 </nav>
 
