--- a/fabric.html
+++ b/fabric.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fabrics | Online Tailor</title>
+    <link rel="icon" href="./images/logo.jfif">
+
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/load.css">
     <link rel="stylesheet" href="style./css/popinfo.css">
