--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,8 @@
                     Collection</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link about" href="fabric.html"><span class="fas fa-money-check-alt fa-lg"></span> Pricing</a>
+                <a class="nav-link about" href="fabric.html"><span class="fas fa-money-check-alt fa-lg"></span>
+                    Pricing</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link " href="contact.html"><span class="fas fa-comments fg-lg"></span> Contact Us</a>
@@ -57,7 +58,7 @@
         </ul>
     </div>
     <div class="avtar "><i class="fas fa-caret-down fa-2x "></i>&nbsp;</div>
-    <i class="fas fa-user-circle fa-2x "></i>
+    <a href="./auth/login.html"><i class="fas fa-user-circle fa-2x "></i></a>
 
 </nav>
 
