--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
             </div>
         </div>
-        <!--------------------------------------------->
+        <!----------------------PROJECT INTRODUCTION----------------------->
         <div class="row row-content align-items-left">
             <div class="col col-sm order-sm-first col-md">
                 <div class="media">
@@ -317,7 +317,7 @@
         <div class="col-lg-4 col-md-4 col-sm-6" style="padding: 1rem;">
             <label style="font-weight: 500; font-size: 18px;">Social Accounts</label><br>
             <a href=""><i class="fab fa-facebook fa-1.9x"> - Facebook</i></a><br>
-            <a href=""><i class="fab fa-instagram fa-1.9x"> - Instagram</i></a>
+            <a href=""><i class="fab fa-instagram fa-1.9x"> - Instagram</i></a><br>
         </div>
 
         <br><br><br>
