--- a/contact.html
+++ b/contact.html
@@ -92,9 +92,21 @@
 <body>
 
     <!-- Contact us -->
-    <br><br>
-    <div class="contact_us ">
-        <p class="label ">CONTACT US</p><br><br>
+    <br><br><br>
+    <p class="label ">CONTACT US AT</p>
+    <div class="container">
+        <div class="row-content">
+            <h2 style="text-align: center;">HEADQUATER</h2>
+            <p style="text-align: center;">HOUSE# 5, STREET 1/S 34 <br>DATA NAGAR <br>BADAMI BAGH <br>LAHORE,PAKISTAN</p>
+        </div>
+        <div class="row-content">
+            <h2 style="text-align: center;">MAIL US AT</h2>
+            <p style="text-align: center;">TAILORONLINE@GMAIL.COM</p>
+        </div>
+        <div class="row-content">
+            <h2 style="text-align: center;">FOR GENERAL QUERIES</h2>
+
+        </div>
 
     </div>
 
@@ -114,12 +126,10 @@
     <div class="row container-fluid" style="padding-top: 2rem;">
         <div class="col-lg-4 col-md-4 col-sm-6" style="padding: 1rem;">
             <label style="font-weight: 500; font-size: 18px;">General Information and Help</label><br>
-            <a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor message from tailor website." target="blank"
-                style="font-size: 16px;">
+            <a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor message from tailor website." target="blank" style="font-size: 16px;">
                 <i class="fas fa-at fa-1.9x"></i>&nbsp; Contact - Taimoor
             </a><br>
-            <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais message from tailor website." target="blank"
-                style="font-size: 16px;">
+            <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais message from tailor website." target="blank" style="font-size: 16px;">
                 <i class="fas fa-at fa-1.9x"></i>&nbsp; Contact - Awais
             </a>
         </div>
@@ -128,15 +138,13 @@
         <div class="col-lg-4 col-md-4 col-sm-6" style="padding: 1rem;">
             <label style="font-weight: 500; font-size: 18px;">Social Accounts</label><br>
             <a href=""><i class="fab fa-facebook fa-1.9x"> - Facebook</i></a><br>
-            <a href=""><i class="fab fa-instagram fa-1.9x"> - Instagram</i></a>
+            <a href=""><i class="fab fa-instagram fa-1.9x"> - Instagram</i></a><br>
         </div>
 
         <br><br><br>
         <div class="col-lg-4 col-md-4 col-sm-12" style="padding: 1rem;">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5029.414381286717!2d74.40751999999996!3d31.547018299999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39190f8aa6801965%3A0xd4b98ebf429d2311!2sAl-Faisal%20Town%2C%20Lahore%2C%20Punjab%2C%20Pakistan!5e1!3m2!1sen!2s!4v1604678886811!5m2!1sen!2s"
-                width="300" height="150" frameborder="0" style="border:0; border-radius: .3rem; padding: .1rem;"
-                allowfullscreen="" aria-hidden=" false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5029.414381286717!2d74.40751999999996!3d31.547018299999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39190f8aa6801965%3A0xd4b98ebf429d2311!2sAl-Faisal%20Town%2C%20Lahore%2C%20Punjab%2C%20Pakistan!5e1!3m2!1sen!2s!4v1604678886811!5m2!1sen!2s"
+                width="300" height="150" frameborder="0" style="border:0; border-radius: .3rem; padding: .1rem;" allowfullscreen="" aria-hidden=" false" tabindex="0"></iframe>
 
         </div>
     </div>
