--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
     <!-- Contact us -->
     <br><br><br>
     <p class="label ">CONTACT US AT</p>
-    <div class="container">
+    <div class="">
         <div class="row-content">
             <h2 style="text-align: center;">HEADQUATER</h2>
             <p style="text-align: center;">HOUSE# 5, STREET 1/S 34 <br>DATA NAGAR <br>BADAMI BAGH <br>LAHORE,PAKISTAN</p>
@@ -106,11 +106,26 @@
             <h2 style="text-align: center;">MAIL US AT</h2>
             <p style="text-align: center;">TAILORONLINE@GMAIL.COM</p>
         </div>
-        <div class="row-content">
+        <div class="">
             <h2 style="text-align: center;">FOR GENERAL QUERIES</h2>
+            <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais I Visited Your Site" target="blank">
+                <i class="fas fa-at fa-1.9x"></i>
+            </a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://api.whatsapp.com/send?phone=+923344129684 " target="blank">
+                <i class="fab fa-whatsapp fa-1.9x"></i>
+            </a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://github.com/Awaisikram788" target="blank">
+                <i class="fab fa-github fa-1.9x"></i>
+            </a>
+            &nbsp;&nbsp;&nbsp;
 
         </div>
-
+        <div class="row-content">
+            <h2 style="text-align: center;">FOR GENERAL QUERIES</h2>
+            <a href=""><i class="fab fa-whatsapp fa-1.9x"> - Instagram</i></a><br>
+        </div>
     </div>
 
 
