--- a/contact.html
+++ b/contact.html
@@ -95,39 +95,54 @@
 <body>
 
     <!-- Contact us -->
-    <br><br><br>
-    <p class="label ">CONTACT US AT</p>
-    <div class="">
-        <div class="row-content">
-            <h2 style="text-align: center;">HEADQUATER</h2>
-            <p style="text-align: center;">HOUSE# 5, STREET 1/S 34 <br>DATA NAGAR <br>BADAMI BAGH <br>LAHORE,PAKISTAN</p>
-        </div>
-        <div class="row-content">
-            <h2 style="text-align: center;">MAIL US AT</h2>
-            <p style="text-align: center;">TAILORONLINE@GMAIL.COM</p>
-        </div>
-        <div class="">
-            <h2 style="text-align: center;">FOR GENERAL QUERIES</h2>
-            <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais I Visited Your Site" target="blank">
-                <i class="fas fa-at fa-1.9x"></i>
-            </a>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="https://api.whatsapp.com/send?phone=+923344129684 " target="blank">
-                <i class="fab fa-whatsapp fa-1.9x"></i>
-            </a>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="https://github.com/Awaisikram788" target="blank">
-                <i class="fab fa-github fa-1.9x"></i>
-            </a>
-            &nbsp;&nbsp;&nbsp;
-
-        </div>
-        <div class="row-content">
-            <h2 style="text-align: center;">FOR GENERAL QUERIES</h2>
-            <a href=""><i class="fab fa-whatsapp fa-1.9x"> - Instagram</i></a><br>
-        </div>
+    <br><br>
+    <div class="about-section">
+        <h1>Our Team Contact</h1>
+        <p>Feel Free to contact with us.</p>
+        <p>Our customer is our First priority we are pleasure to deal with you.</p>
     </div>
 
+    <h2 style="text-align:center">Our Team</h2>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <img src="images/awais.jpg" alt="Jane" style="width:100%">
+                <div class="container">
+                    <h2>Awais Ikram</h2>
+                    <p class="title">CEO & Founder</p>
+                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>jane@example.com</p>
+                    <p><button class="button">Contact</button></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <img src="images/taimoor.jpg" alt="Mike" style="width:100%">
+                <div class="container">
+                    <h2>Taimoor Hassan</h2>
+                    <p class="title">CEO & CO-Founder</p>
+                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>mike@example.com</p>
+                    <p><button class="button">Contact</button></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <img src="images/sultan.jpg" alt="John" style="width:100%">
+                <div class="container">
+                    <h2>Sultan Khan</h2>
+                    <p class="title">Head Tailor</p>
+                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>john@example.com</p>
+                    <p><button class="button">Contact</button></p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="./js/loading.js"></script>
     <script src="./js/popinfo.js"></script>
