--- a/contact.html
+++ b/contact.html
@@ -110,9 +110,9 @@
                 <div class="container">
                     <h2>Awais Ikram</h2>
                     <p class="title">CEO & Founder</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>jane@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <p>Hi! My name is Awais. Feel free to contact with me.</p>
+                    <p>Awaisikram788@gmail.com</p>
+                    <p><a href="https://api.whatsapp.com/send?phone=+923344129684"><button class="button">Contact</button></a></p>
                 </div>
             </div>
         </div>
@@ -123,9 +123,9 @@
                 <div class="container">
                     <h2>Taimoor Hassan</h2>
                     <p class="title">CEO & CO-Founder</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>mike@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <p>Hi! My name is Taimoor. Feel free to contact with me.</p>
+                    <p>king.taimoor98.th@gmail.com</p>
+                    <p><a href="https://api.whatsapp.com/send?phone=+923174585625"><button class="button">Contact</button></a></p>
                 </div>
             </div>
         </div>
@@ -136,9 +136,9 @@
                 <div class="container">
                     <h2>Sultan Khan</h2>
                     <p class="title">Head Tailor</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>john@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <p>Hi! My name is Sultan. Feel free to contact with me.</p>
+                    <p>Sultankhan@gmail.com</p>
+                    <p><a href="https://api.whatsapp.com/send?phone=+923333366631"><button class="button">Contact</button></a></p>
                 </div>
             </div>
         </div>
