--- a/auth/Register.html
+++ b/auth/Register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sign in | Tailor online</title>
+		<title>Sign up | Tailor online</title>
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -26,20 +26,26 @@
 					<div class="form-group ">
 						<div class="input-group">
 							<span class="input-group-addon"><i class="fa fa-user"></i></span>
-							<input type="text" name="username" class="form-control" placeholder="Enter email" required="required">
+							<input type="email" name="email" class="form-control" placeholder="Enter email" required="required">
 						</div>
 					</div>
 
 					<div class="form-group">
 						<div class="input-group">
 							<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-							<input type="password" name="password" class="form-control" placeholder="enter password" required="required">
+							<input type="password" name="password" class="form-control" placeholder="password" required="required">
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="input-group">
+							<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+							<input type="password" name="retype-password" class="form-control" placeholder="confirm password" required="required">
 						</div>
 					</div>
 
 					<div class="form-group">
 						<button type="submit" class="btn btn-success btn-block">
-							<a href="#" class="light-green-color">Sign In</a>
+							<a href="#" class="light-green-color">Sign Up</a>
 						</button>
 					</div>
 
@@ -49,7 +55,7 @@
 			        </div>
 					
 				</form>
-				<div class="hint-text">Don't have an account? <a href="./Register.html" class="text-success light-green-color">Register Now!</a></div>
+				<div class="hint-text">Don't have an account? <a href="./login.html" class="text-success light-green-color">Sign In!</a></div>
 			</div>
 			
 			
