--- a/contact.html
+++ b/contact.html
@@ -103,8 +103,9 @@
     </div>
 
     <h2 style="text-align:center">Our Team</h2>
-    <div class="row">
-        <div class="column">
+    <br>
+    <div class="row ">
+        <div class="column col-lg-4 col-md-4 col-sm-6">
             <div class="card">
                 <img src="images/awais.jpg" alt="Jane" style="width:100%">
                 <div class="container">
@@ -117,7 +118,7 @@
             </div>
         </div>
 
-        <div class="column">
+        <div class="column col-lg-4 col-md-4 col-sm-6">
             <div class="card">
                 <img src="images/taimoor.jpg" alt="Mike" style="width:100%">
                 <div class="container">
@@ -131,7 +132,7 @@
         </div>
 
 
-        <div class="column">
+        <div class="column col-lg-4 col-md-4 col-sm-6">
             <div class="card">
                 <img src="images/sultan.jpg" alt="John" style="width:100%">
                 <div class="container">
