--- a/collection.html
+++ b/collection.html
@@ -107,7 +107,7 @@
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
                     <span class="nav-text">
-                        <a data-toggle="modal" data-target="#reserveModal">
+                        <a href="./form/order.html">
                             <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
                     </span>
@@ -120,7 +120,7 @@
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
                     <span class="nav-text">
-                        <a data-toggle="modal" data-target="#reserveModal">
+                        <a href="./form/order.html">
                             <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
                     </span>
@@ -133,7 +133,7 @@
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
                     <span class="nav-text">
-                        <a data-toggle="modal" data-target="#reserveModal">
+                        <a href="./form/order.html">
                             <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
                     </span>
@@ -146,7 +146,7 @@
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
                     <span class="nav-text">
-                        <a data-toggle="modal" data-target="#reserveModal">
+                        <a href="./form/order.html">
                             <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
                     </span>
@@ -159,7 +159,7 @@
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
                     <span class="nav-text">
-                        <a data-toggle="modal" data-target="#reserveModal">
+                        <a href="./form/order.html">
                             <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
                     </span>
@@ -172,7 +172,7 @@
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
                     <span class="nav-text">
-                        <a data-toggle="modal" data-target="#reserveModal">
+                        <a href="./form/order.html">
                             <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
                     </span>
@@ -185,7 +185,7 @@
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
                     <span class="nav-text">
-                        <a data-toggle="modal" data-target="#reserveModal">
+                        <a href="./form/order.html">
                             <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
                     </span>
@@ -198,7 +198,7 @@
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
                     <span class="nav-text">
-                        <a data-toggle="modal" data-target="#reserveModal">
+                        <a href="./form/order.html">
                             <span class="btn btn-success" style="padding: .1rem;">Order Now!</span>
                     </a>
                     </span>
