--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Tailor Online</title>
     <link rel="icon" href="./images/logo.jfif">
-    
+
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/load.css">
     <link rel="stylesheet" href="style./css/popinfo.css">
@@ -59,7 +59,7 @@
         </ul>
     </div>
     <div class="avtar "><i class="fas fa-caret-down fa-2x "></i>&nbsp;</div>
-    <a href="./auth/login.html" ><i class="fas fa-user-circle fa-2x avtar"></i></a>
+    <a href="./auth/login.html"><i class="fas fa-user-circle fa-2x avtar"></i></a>
 
 </nav>
 
@@ -109,7 +109,7 @@
         <br>
         <p><i>If your are busy and you have no time to create account on our site then:</i></p>
         <p class="lead">
-            <a class="btn btn-danger btn-lg" href="#" role="button"><i>Place Your Order Now!</i></a>
+            <a class="btn btn-danger btn-lg" href="form/form.html" role="button"><i>Place Your Order Now!</i></a>
         </p>
     </div>
     <!------------------------carousel-------------------------------------------------------------->
