--- a/collection.html
+++ b/collection.html
@@ -210,8 +210,8 @@
 
 
     </div>
-    <script src="./js/loading.js"></script>
-    <script src="./js/popinfo.js"></script>
+    <!-- <script src="./js/loading.js"></script>
+    <script src="./js/popinfo.js"></script> -->
 
 
 </body>
