--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/load.css">
-    <link rel="stylesheet" href="style./css/popinfo.css">
+    <!-- <link rel="stylesheet" href="style./css/popinfo.css"> -->
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -59,7 +59,7 @@
         </ul>
     </div>
     <div class="avtar "><i class="fas fa-caret-down fa-2x "></i>&nbsp;</div>
-    <a href="./auth/login.html" ><i class="fas fa-user-circle fa-2x avtar"></i></a>
+    <a href="./auth/login.html" ><i class="fas fa-user-circle fa-2x "></i></a>
 
 </nav>
 
@@ -267,8 +267,8 @@
     </div>
 
 
-    <script src="./js/loading.js"></script>
-    <script src="./js/popinfo.js"></script>
+    <!-- <script src="./js/loading.js"></script>
+    <script src="./js/popinfo.js"></script> -->
     <script src="./js/network status.js"></script>
     <script src="./js/scroll.js"></script>
 
