--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 
 <body>
 
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-46ffeeea-8536-42bc-8a74-2cdd36c46323"></div>
+
 
     <!-- pop up info
     <div class="pmodel">
@@ -109,9 +112,16 @@
         <br>
         <p><i>If your are busy and you have no time to create account on our site then:</i></p>
         <p class="lead">
-            <a class="btn btn-danger btn-lg" href="form/form.html" role="button"><i>Place Your Order Now!</i></a>
+            <a class="btn btn-danger btn-lg" href="form/data form.html" role="button"><i>Place Your Order Now!</i></a>
         </p>
     </div>
+
+    <a href="https://wa.me/+923174585625?text=Hi%20Eric,%20I%20am%20sending%20you%20this%20message%20because%20I%20am%20interested%20in%20your%20business!" style="text-decoration: none;" target="_blank">
+        <img src="https://i.ibb.co/N9P0K9H/239px-Whats-App-svg.png" width="50" height="50"/>
+   </a>
+   
+   
+
     <!------------------------carousel-------------------------------------------------------------->
     <div class="container">
         <div class="row row-content">
